test/fail/match/match_bad_decompose.lily
#[
SyntaxError: Expected '(', not ':'.
    from match_bad_decompose.lily:9:
]#

var v = None

match v: {
    case Some:
    case None:
}
